Fix overlapping text on small screens

--- a/client/src/components/TaskCard/TaskCard.module.css
+++ b/client/src/components/TaskCard/TaskCard.module.css
@@ -20,6 +20,7 @@
   font-size: 1.125rem;
   font-weight: 600;
   color: white;
+  min-height: 60px;
 }
 
 .colorBar {
